--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <style>
 
 h1 {
-   color: #fafcf5;
+   color: black;
    font-size: 30px;
    text-decoration: none;
    font-weight: normal;
@@ -15,7 +15,7 @@ h1 {
 }
   
 h2 {
-   color: #fafcf5;
+   color: #888888;
    font-size: 16px;
    text-decoration: none;
    font-weight: normal;
@@ -25,12 +25,15 @@ h2 {
 body {
    margin:0px;
    padding:0px;
+   padding-top:10%;
    color: #101010;
    font-size: 18px;
    text-decoration: none;
    font-weight: normal;
    font-family: 'Open Sans',sans-serif;
    line-height:normal;
+   background-image: url('whitebg.png');
+
 }
 
 a {
@@ -46,10 +49,8 @@ a {
    padding-bottom:10%;
    padding-right:10%;
    padding-left:10%;
-   background-color: #f4f4f2;
 }
 #Top {
-   background-image: url('bluebg.png');
    padding-top:2%;
    padding-right:10%;
    padding-bottom:1%;
@@ -128,14 +129,14 @@ a {
 <h2> hover over image to see project in action </h2>
 </div>
 
-<div id="Project" style="border-left:12px solid #f8f376">
-<span style="color:#707070">Ongoing project: </span> I'm working on scraping and analysing NRL match statistics using <span style="color:green">Python</span> and <span style="color:#004400">lxml</span>. (<a href="https://github.com/LukedFitzpatrick/nrlnotebook">Github Repository</a>)
+<div id="Project" style="border-left:5px solid #f8f376">
+<span style="color:#707070">Work in Progress </span> I'm working on scraping and analysing NRL match statistics using <span style="color:green">Python</span> and <span style="color:#004400">lxml</span>. (<a href="https://github.com/LukedFitzpatrick/nrlnotebook">Github Repository</a>)
 <br/> <br/>
 <div id="NRL"></div> 
 </div>
 
 
-<div id="Project" style="border-left:12px solid #7ec1ca">
+<div id="Project" style="border-left:5px solid #7ec1ca">
 <span style="color:#707070">February 2016</span> I created a simple music ratings website using <span style="color:#cc3300">HTML/CSS</span>
 (<a href="http://lukedfitzpatrick.github.io/music-for-walking">The website</a>)
 <br/> <br/>
@@ -143,7 +144,7 @@ a {
 </div>
 
 
-<div id="Project" style="border-left:12px solid #c22d2d">
+<div id="Project" style="border-left:5px solid #c22d2d">
 <span style="color:#707070">February 2016</span>  I created a band and song name generator using <span style="color:#6600cc">C++</span>.
 (<a href="https://github.com/LukedFitzpatrick/studio">Github Repository</a>)
 <br/> <br/>
@@ -151,13 +152,13 @@ a {
 </div>
 
 
-<div id="Project" style="border-left:12px solid #7db169">
+<div id="Project" style="border-left:5px solid #7db169">
 <span style="color:#707070">December 2015</span> I created a platformer game engine using <span style="color:green">Python</span> and <span style="color:green">Pygame</span>. It supports live level editing, level storage, key rebinding, a physics and collision engine, and a robust graphics handling system including support for animation. (<a href="https://github.com/LukedFitzpatrick/platformer">Github Repository</a>)
 <br/><br/>
 <div id="Platformer"></div>
 </div>
 
-<div id="Project" style="border-left:12px solid #1e1c31">
+<div id="Project" style="border-left:5px solid #1e1c31">
 <span style="color:#707070">November 2015</span> I created a game where you control elevators using <span style="color:green">Python</span> and <span style="color:green">Pygame</span>. To help with this, I also made a little animation preview tool.
 (<a href="https://github.com/LukedFitzpatrick/liftsim">Github Repository</a>)
 <br/><br/>
