--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@ a {
 }
 
 #Project {
-   padding-top:10%;
-   padding-bottom:10%;
+   padding-top:5%;
+   padding-bottom:5%;
    padding-right:10%;
    padding-left:10%;
 }
@@ -118,6 +118,18 @@ a {
    height: 50%;
 }
 
+#Shop {
+   border-radius: 25px;
+   background-size: cover;
+   background-image: url('images/shop.png');
+   height: 25%;
+}
+
+#Shop:hover {
+   background-size: contain;
+   background-image: url('images/shop.gif');
+   height: 50%;
+}
 
 
 </style>
@@ -126,8 +138,23 @@ a {
 <body>
 <div id="Top">
 <h1> LUKE FITZPATRICK'S PORTFOLIO </h1>
-<h2> hover over image to see project in action </h2>
 </div>
+
+<div id="Project">
+Featured below are a selection of the projects I have worked on in my spare time while at school and university. Most of my projects since 2014 are on <a href="https://github.com/LukedFitzpatrick"> my Github page.</a> I've been working hard on improving my knowledge and skills this year, and documenting everything on Github:
+ <br/><br/>
+<center>
+<img src="images/gitcontributions.png">
+</center>
+<br/><br/>
+I love designing, planning and implementing all kinds of software. I started programming in 2010 when I was 14, and I've been consistently growing as a programmer and designer ever since.
+<br/> <br/>
+I've taught myself C/C++, Python, HTML/CSS/Javascript and also how to use Git, Emacs, Visual Studio, LaTeX, and the Linux command line.
+<br/> <br/>
+</div>
+
+<h2> hover over image to see project in action </h2>
+
 
 <div id="Project" style="border-left:5px solid #f8f376">
 <span style="color:#707070">Work in Progress </span> I'm working on scraping and analysing NRL match statistics using <span style="color:green">Python</span> and <span style="color:#004400">lxml</span>. (<a href="https://github.com/LukedFitzpatrick/nrlnotebook">Github Repository</a>)
@@ -135,6 +162,20 @@ a {
 <div id="NRL"></div> 
 </div>
 
+
+
+<div id="Project" style="border-left:5px solid #7db169">
+<span style="color:#707070">December 2015</span> I created a platformer game engine using <span style="color:green">Python</span> and <span style="color:green">Pygame</span>. It supports live level editing, level storage, key rebinding, a physics and collision engine, and a robust graphics handling system including support for animation. (<a href="https://github.com/LukedFitzpatrick/platformer">Github Repository</a>)
+<br/><br/>
+<div id="Platformer"></div>
+</div>
+
+<div id="Project" style="border-left:5px solid #1e1c31">
+<span style="color:#707070">November 2015</span> I created a game where you control elevators using <span style="color:green">Python</span> and <span style="color:green">Pygame</span>. To help with this, I also made a little animation preview tool.
+(<a href="https://github.com/LukedFitzpatrick/liftsim">Github Repository</a>)
+<br/><br/>
+<div id="Liftsim"></div>
+</div>
 
 <div id="Project" style="border-left:5px solid #7ec1ca">
 <span style="color:#707070">February 2016</span> I created a simple music ratings website using <span style="color:#cc3300">HTML/CSS</span>
@@ -152,19 +193,18 @@ a {
 </div>
 
 
-<div id="Project" style="border-left:5px solid #7db169">
-<span style="color:#707070">December 2015</span> I created a platformer game engine using <span style="color:green">Python</span> and <span style="color:green">Pygame</span>. It supports live level editing, level storage, key rebinding, a physics and collision engine, and a robust graphics handling system including support for animation. (<a href="https://github.com/LukedFitzpatrick/platformer">Github Repository</a>)
+<div id="Project" style="border-left:5px solid #f8f376">
+<span style="color:#707070">June 2015</span> I created a game where you buy and sell swords using <span style="color:green">Python</span> and <span style="color:green">libtcod</span>.
+(<a href="https://github.com/LukedFitzpatrick/shop">Github Repository</a>)
 <br/><br/>
-<div id="Platformer"></div>
+<div id="Shop"></div>
 </div>
 
-<div id="Project" style="border-left:5px solid #1e1c31">
-<span style="color:#707070">November 2015</span> I created a game where you control elevators using <span style="color:green">Python</span> and <span style="color:green">Pygame</span>. To help with this, I also made a little animation preview tool.
-(<a href="https://github.com/LukedFitzpatrick/liftsim">Github Repository</a>)
-<br/><br/>
-<div id="Liftsim"></div>
+<div id="Project">
+and I also made this website!
+<br/> <br/>
+contact me at lukedfitzpatrick@gmail.com
 </div>
-
 
 </body>
 </html>
