--- a/index.html
+++ b/index.html
@@ -145,6 +145,7 @@ Featured below are a selection of the projects I have worked on in my spare time
  <br/><br/>
 <center>
 <img src="images/gitcontributions.png">
+<p style="font-size:10px"> (this image includes private contributions so it will look different on the github page...) </p>
 </center>
 <br/><br/>
 I love designing, planning and implementing all kinds of software. I started programming in 2010 when I was 14, and I've been consistently growing as a programmer and designer ever since.
