--- a/index.html
+++ b/index.html
@@ -56,81 +56,12 @@ a {
    padding-bottom:1%;
    padding-left:10%;
 }
-#Music {
-   border-radius: 25px;
-   background-size: cover;
-   background-image: url('images/music.png');
-   height: 25%;
 
+img {
+   max-width:80%;
+   display:block;
+   margin: 0 auto;
 }
-
-#Music:hover {
-   background-image: url('images/music.gif');
-   height: 50%;
-}
-
-#NRL {
-   border-radius: 25px;
-   background-size: cover;
-   background-image: url('images/nrl.png');
-   height: 25%;
-}
-
-#NRL:hover {
-   background-image: url('images/nrl.gif');
-   height: 50%;
-}
-
-#Bandnames {
-   border-radius: 25px;
-   background-size: cover;
-   background-image: url('images/bandnames.png');
-   height: 25%;
-}
-
-#Bandnames:hover {
-   background-image: url('images/bandnames.gif');
-   height: 50%;
-}
-
-#Platformer {
-   border-radius: 25px;
-   background-size: cover;
-   background-image: url('images/platformer.png');
-   height: 25%;
-}
-
-#Platformer:hover {
-   background-image: url('images/platformer.gif');
-   height: 50%;
-}
-
-#Liftsim {
-   border-radius: 25px;
-   background-size: cover;
-   background-image: url('images/liftsim.png');
-   height: 25%;
-}
-
-#Liftsim:hover {
-   background-size: contain;
-   background-image: url('images/liftsim.gif');
-   height: 50%;
-}
-
-#Shop {
-   border-radius: 25px;
-   background-size: cover;
-   background-image: url('images/shop.png');
-   height: 25%;
-}
-
-#Shop:hover {
-   background-size: contain;
-   background-image: url('images/shop.gif');
-   height: 50%;
-}
-
 
 </style>
 </head>
@@ -154,13 +85,11 @@ I've taught myself C/C++, Python, HTML/CSS/Javascript and also how to use Git, E
 <br/> <br/>
 </div>
 
-<h2> hover over image to see project in action </h2>
-
 
 <div id="Project" style="border-left:5px solid #f8f376">
 <span style="color:#707070">Work in Progress </span> I'm working on scraping and analysing NRL match statistics using <span style="color:green">Python</span> and <span style="color:#004400">lxml</span>. (<a href="https://github.com/LukedFitzpatrick/nrlnotebook">Github Repository</a>)
 <br/> <br/>
-<div id="NRL"></div> 
+<img src="images/nrl.gif">
 </div>
 
 
@@ -168,21 +97,21 @@ I've taught myself C/C++, Python, HTML/CSS/Javascript and also how to use Git, E
 <div id="Project" style="border-left:5px solid #7db169">
 <span style="color:#707070">December 2015</span> I created a platformer game engine using <span style="color:green">Python</span> and <span style="color:green">Pygame</span>. It supports live level editing, level storage, key rebinding, a physics and collision engine, and a robust graphics handling system including support for animation. (<a href="https://github.com/LukedFitzpatrick/platformer">Github Repository</a>)
 <br/><br/>
-<div id="Platformer"></div>
+<img src="images/platformer.gif">
 </div>
 
 <div id="Project" style="border-left:5px solid #1e1c31">
 <span style="color:#707070">November 2015</span> I created a game where you control elevators using <span style="color:green">Python</span> and <span style="color:green">Pygame</span>. To help with this, I also made a little animation preview tool.
 (<a href="https://github.com/LukedFitzpatrick/liftsim">Github Repository</a>)
 <br/><br/>
-<div id="Liftsim"></div>
+<img src="images/liftsim.gif">
 </div>
 
 <div id="Project" style="border-left:5px solid #7ec1ca">
 <span style="color:#707070">February 2016</span> I created a simple music ratings website using <span style="color:#cc3300">HTML/CSS</span>
 (<a href="http://lukedfitzpatrick.github.io/music-for-walking">The website</a>)
 <br/> <br/>
-<div id="Music"></div> 
+<img src="images/music.gif">
 </div>
 
 
@@ -190,7 +119,7 @@ I've taught myself C/C++, Python, HTML/CSS/Javascript and also how to use Git, E
 <span style="color:#707070">February 2016</span>  I created a band and song name generator using <span style="color:#6600cc">C++</span>.
 (<a href="https://github.com/LukedFitzpatrick/studio">Github Repository</a>)
 <br/> <br/>
-<div id="Bandnames"></div> 
+<img src="images/bandnames.gif">
 </div>
 
 
@@ -198,7 +127,7 @@ I've taught myself C/C++, Python, HTML/CSS/Javascript and also how to use Git, E
 <span style="color:#707070">June 2015</span> I created a game where you buy and sell swords using <span style="color:green">Python</span> and <span style="color:green">libtcod</span>.
 (<a href="https://github.com/LukedFitzpatrick/shop">Github Repository</a>)
 <br/><br/>
-<div id="Shop"></div>
+<img src="images/shop.gif">
 </div>
 
 <div id="Project">
