--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ img {
 </div>
 
 <div id="Project">
-Featured below are a selection of the projects I have worked on in my spare time while at school and university. Most of my projects since 2014 are on <a href="https://github.com/LukedFitzpatrick"> my Github page.</a> I've been working hard on improving my knowledge and skills this year, and documenting everything on Github:
+Featured below are a selection of the projects I have worked on in my spare time while at school and university. Most of my projects since 2014 are on <a href="https://github.com/LukedFitzpatrick"> my Github page.</a>
  <br/><br/>
 <center>
 <img src="images/gitcontributions.png">
@@ -81,7 +81,7 @@ Featured below are a selection of the projects I have worked on in my spare time
 <br/><br/>
 I love designing, planning and implementing all kinds of software. I started programming in 2010 when I was 14, and I've been consistently growing as a programmer and designer ever since.
 <br/> <br/>
-I've taught myself C/C++, Python, HTML/CSS/Javascript and also how to use Git, Emacs, Visual Studio, LaTeX, and the Linux command line.
+I'm comfortable programming in C/C++, Python, Java and HTML/CSS/Javascript. Software tools I regularly use include Git, Emacs, Visual Studio, LaTeX, and the Linux command line.
 <br/> <br/>
 </div>
 
