added comp9417 project

--- a/index.html
+++ b/index.html
@@ -72,18 +72,31 @@ img {
 </div>
 
 <div id="Project">
-Featured below are a selection of the projects I have worked on in my spare time while at school and university. Most of my projects since 2014 are on <a href="https://github.com/LukedFitzpatrick"> my Github page.</a>
+Featured below are a selection of the projects I have worked on over the last few years, largely in my spare time. Most of my projects since 2014 are on <a href="https://github.com/LukedFitzpatrick"> my Github page.</a>
  <br/><br/>
 <center>
 <img src="images/gitcontributions.png">
 <p style="font-size:10px"> (this image includes private contributions so it will look different on the github page...) </p>
 </center>
 <br/><br/>
-I love designing, planning and implementing all kinds of software. I started programming in 2010 when I was 14, and I've been consistently growing as a programmer and designer ever since.
+I love designing, planning and implementing all kinds of software. I started programming in 2010 when I was 14, and I've been consistently growing as a programmer and software designer ever since.
 <br/> <br/>
-I'm comfortable programming in C/C++, Python, Java and HTML/CSS/Javascript. Software tools I regularly use include Git, Emacs, Visual Studio, LaTeX, and the Linux command line.
+I'm comfortable programming in C, Python and Java and I have some basic familiarity with C++ and HTML/CSS/Javascript. Software tools I regularly use include Git, Emacs, Visual Studio, LaTeX, and the Linux command line.
 <br/> <br/>
 </div>
+
+
+<div id="Project" style="border-left:5px solid #f8f376">
+<span style="color:#707070">May 2016</span> As part of
+a <span style="color:red">Machine Learning and Data Mining</span>
+course I completed at UNSW, I developed a system using Reinforcement
+Learning in <span style="color:green">Python</span> to improve traffic
+flow through an intersection. (I can't publish the full report because
+this was an assignment, contact me for a closer look, and the source
+code)<br/> <br/>
+<img src="images/traffic.gif">
+</div>
+
 
 
 <div id="Project" style="border-left:5px solid #f8f376">
